k8s/aws/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collab-ingress
  namespace: collab
spec:
  ingressClassName: traefik
  rules:
    - host: squiredocs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collab-app
                port:
                  number: 80
    - host: app.squiredocs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collab-app
                port:
                  number: 80
